--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>BCES - Grupo de Biologia Computacional, Evolutiva e de Sistemas</title>
-  <link rel="stylesheet" href="./index_files/quips.css" type="text/css" title="preferred">
-  <link rel="stylesheet" href="./index_files/member.css" type="text/css" title="preferred">
-  <link rel="alternate stylesheet" href="./index_files/quips_alt.css" type="text/css" title="alternate">
-  <link rel="stylesheet" type="text/css" href="./index_files/UberGallery.css">
-  <link rel="stylesheet" type="text/css" href="./index_files/colorbox.css">
+  <link rel="stylesheet" href="./css/quips.css" type="text/css" title="preferred">
+  <link rel="stylesheet" href="./css/member.css" type="text/css" title="preferred">
+  <link rel="alternate stylesheet" href="./css/quips_alt.css" type="text/css" title="alternate">
+  <link rel="stylesheet" type="text/css" href="./css/UberGallery.css">
+  <link rel="stylesheet" type="text/css" href="./css/colorbox.css">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
   <meta http-equiv="imagetoolbar" content="no">
