--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ $(document).ready(function(){
   <div id="wrapper">
    <div id="container">
     <!-- HEADER -->
-    <img src="./index_files/divider_hor_top.gif" alt="------">
+    <img src="./pixs/divider_hor_top.gif" alt="------">
     <div id="header">
      <div id="header_col_01">
-      <p align="center"><a href="http://bce.bioetanol.cnpem.br/"><img src="./index_files/BCES.png" alt="BCES logo" border="0" height="82" width="160"></a></p>
-      <p align="center"><a href="http://ctbe.cnpem.br/"><img src="./index_files/CTBE.png" alt="CTBE logo" border="0" height="45" width="104"></a></p>
-      <p align="center"><a href="http://www.cnpem.br/"><img src="./index_files/CNPEM.png" alt="CNPEM logo" border="0" height="39" width="104"></a></p>
+      <p align="center"><a href="http://bce.bioetanol.cnpem.br/"><img src="./pixs/BCES.png" alt="BCES logo" border="0" height="82" width="160"></a></p>
+      <p align="center"><a href="http://ctbe.cnpem.br/"><img src="./pixs/CTBE.png" alt="CTBE logo" border="0" height="45" width="104"></a></p>
+      <p align="center"><a href="http://www.cnpem.br/"><img src="./pixs/CNPEM.png" alt="CNPEM logo" border="0" height="39" width="104"></a></p>
      </div>
      <div id="header_col_02_03">
       <div style="text-align: center;">
@@ -53,10 +53,10 @@ var a='';var b='02dol2rtb 22Ano2.e.EaD%iargir%3%t.e.i@./raebo3an% %%3an%oog3%flo
       </p>
      </div>
      <div id="header_col_04">
-      <p align="center"><img src="./index_files/wordle_20092016.png" alt="Research cloud" border="0" height="210"></p>
+      <p align="center"><img src="./pixs/wordle_20092016.png" alt="Research cloud" border="0" height="210"></p>
      </div>
     </div>
-    <img src="./index_files/divider_header-content.gif" alt="---">
+    <img src="./pixs/divider_header-content.gif" alt="---">
     <!--COL 01-->
     <div id="col_01">
      <div id="col_01_form">
@@ -72,7 +72,7 @@ var a='';var b='02dol2rtb 22Ano2.e.EaD%iargir%3%t.e.i@./raebo3an% %%3an%oog3%flo
        <a href="http://bce.bioetanol.cnpem.br/applying.php">Applying</a><br>
       </p>
      </div>
-     <img src="./index_files/divider_col_01.gif" alt="---"> 
+     <img src="./pixs/divider_col_01.gif" alt="---"> 
     </div>
     <!--DIV for col_01-->
     <!--MAIN CONTENT AREA STARTS-->
@@ -87,7 +87,7 @@ var a='';var b='02dol2rtb 22Ano2.e.EaD%iargir%3%t.e.i@./raebo3an% %%3an%oog3%flo
      <!--MAIN CONTENT AREA ENDS-->
     </div>
     <!--DIV for wrapper_col_02-03-->
-    <img src="./index_files/divider_hor_top.gif" alt="---">
+    <img src="./pixs/divider_hor_top.gif" alt="---">
    </div>
    <!--DIV for container-->
   </div>
