--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <link rel="stylesheet" href="./css/quips.css" type="text/css" title="preferred">
   <link rel="stylesheet" href="./css/member.css" type="text/css" title="preferred">
   <link rel="alternate stylesheet" href="./css/quips_alt.css" type="text/css" title="alternate">
-  <link rel="stylesheet" type="text/css" href="./css/UberGallery.css">
-  <link rel="stylesheet" type="text/css" href="./css/colorbox.css">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
   <meta http-equiv="imagetoolbar" content="no">
-  <script type="text/javascript" src="./index_files/jquery.min.js"></script>
-  <script type="text/javascript" src="./index_files/jquery.colorbox.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="/pics_gallery/reso/pics_gallery/resources/colorboxx/jquery.colorbox.js"></script>
   <script src="./index_files/sjb2szo.js"></script>
   <script>try{Typekit.load({ async: true
 });}catch(e){}</script>
