--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <meta http-equiv="Content-Script-Type" content="text/javascript">
   <meta http-equiv="imagetoolbar" content="no">
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="/pics_gallery/reso/pics_gallery/resources/colorboxx/jquery.colorbox.js"></script>
-  <script src="./index_files/sjb2szo.js"></script>
+  <script src="https://use.typekit.net/sjb2szo.js"></script>
   <script>try{Typekit.load({ async: true
 });}catch(e){}</script>
   <script type="text/javascript">
