Fix email in index

--- a/index.html
+++ b/index.html
@@ -27,26 +27,13 @@ $(document).ready(function(){
     <div id="header">
      <div id="header_col_01">
       <p align="center"><a href="http://bce.bioetanol.cnpem.br/"><img src="./pixs/BCES.png" alt="BCES logo" border="0" height="82" width="160"></a></p>
-      <p align="center"><a href="http://ctbe.cnpem.br/"><img src="./pixs/CTBE.png" alt="CTBE logo" border="0" height="45" width="104"></a></p>
-      <p align="center"><a href="http://www.cnpem.br/"><img src="./pixs/CNPEM.png" alt="CNPEM logo" border="0" height="39" width="104"></a></p>
      </div>
      <div id="header_col_02_03">
       <div style="text-align: center;">
        <i style="font-weight: bold;">Grupo de Biologia Computacional, Evolutiva e de Sistemas</i>
       </div>
-      <p style="text-align: center;"><a href="http://ctbe.cnpem.br/"><i>Laboratório Nacional de Ciência e Tecnologia do Bioetanol (CTBE)</i></a></p>
-      <p style="text-align: center;"><a href="http://www.cnpem.br/"><i>Centro Nacional de Pesquisa em Energia e Materiais (CNPEM)</i></a></p>
-      <p style="text-align: center;"><i>Rua Giuseppe Maximo Scolfaro No. 10000, Campinas/SP, Brasil</i></p><br>
       <p style="text-align: center;"><i>Leader: Dr. rer. nat. Diego M. Riaño-Pachón</i></p>
-      <p style="text-align: center;"><i>contact:</i>
-      <script>
-<!--
-// iScramble 1.0 from http://www.z-host.com/php/iscramble
-var a='';var b='02dol2rtb 22Ano2.e.EaD%iargir%3%t.e.i@./raebo3an% %%3an%oog3%floogdolCC3ortbeboahmi@.%iar eigirEno3 ';var c='6372510849';for(var i=0;i<10;i++) for(var j=0;j<10;j++) a+=b.charAt((parseInt(c.charAt(j))*10)+i);document.writeln(unescape(a));
-// -->
-      </script><a href="mailto:diego.riano@bioetanol.org.br">diego.riano@bioetanol.org.br</a>    
-
-      <noscript>&lt;i&gt;[Please Enable JavaScript]&lt;/i&gt;</noscript>
+      <p style="text-align: center;"><i>contact: diriano at gmail do com or diriano at iq dot usp dot br</i>
       </p>
      </div>
      <div id="header_col_04">
