fix links in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0030)http://bce.bioetanol.cnpem.br/ -->
+<!-- saved from url=(0030)https://diriano.github.io/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>BCES - Grupo de Biologia Computacional, Evolutiva e de Sistemas</title>
@@ -26,7 +26,7 @@ $(document).ready(function(){
     <img src="./pixs/divider_hor_top.gif" alt="------">
     <div id="header">
      <div id="header_col_01">
-      <p align="center"><a href="http://bce.bioetanol.cnpem.br/"><img src="./pixs/BCES.png" alt="BCES logo" border="0" height="82" width="160"></a></p>
+      <p align="center"><a href="https://diriano.github.io/"><img src="./pixs/BCES.png" alt="BCES logo" border="0" height="82" width="160"></a></p>
      </div>
      <div id="header_col_02_03">
       <div style="text-align: center;">
@@ -46,14 +46,14 @@ $(document).ready(function(){
      <div id="col_01_form">
       <h1><span class="h1_underline">Navigate</span></h1>
       <p> 
-       <a href="http://bce.bioetanol.cnpem.br/">Home</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/projects.php">Projects</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/members.php">Members</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/pictures.php">Pictures</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/publications.php">Publications</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/tools.php">Tools</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/links.php">Links</a><br>
-       <a href="http://bce.bioetanol.cnpem.br/applying.php">Applying</a><br>
+       <a href="https://diriano.github.io/">Home</a><br>
+       <a href="https://diriano.github.io/projects.php">Projects</a><br>
+       <a href="https://diriano.github.io/members.php">Members</a><br>
+       <a href="https://diriano.github.io/pictures.php">Pictures</a><br>
+       <a href="https://diriano.github.io/publications.php">Publications</a><br>
+       <a href="https://diriano.github.io/tools.php">Tools</a><br>
+       <a href="https://diriano.github.io/links.php">Links</a><br>
+       <a href="https://diriano.github.io/applying.php">Applying</a><br>
       </p>
      </div>
      <img src="./pixs/divider_col_01.gif" alt="---"> 
@@ -63,9 +63,9 @@ $(document).ready(function(){
     <div id="wrapper_main_content_area">
      <div class="main_content_area_col_02_04">
 <div align="justify">
-<p>The Computational, Evolutionary and Systems Biology Group ("Grupo de Biologia Computacional, Evolutiva e de Sistemas": BCES) is a research team at the <a href="http://ctbe.cnpem.br/">Brazilian Bioethanol Science and Technology Laboratory</a> in the city of Campinas, São Paulo State in Brazil.</p>
+<p>This is the web site of the Computational, Evolutionary and Systems Biology Group ("Grupo de Biologia Computacional, Evolutiva e de Sistemas": BCES).</p>
 <p>We are interested in the study of organisms involved in the generation of bioenergy. Employing techniques of bioinformatics, systems biology, evolutionary biology, network biology, computational biology, genomics and transcriptomics, among others. This includes, for instance, elucidating the genome sequence of the sugarcane plants, as this is the main source of green energy in Brazil, and understanding this genome could aid in strengthening molecular breeding approaches. Also, we are interested in understanding what are the enzymes required for optimal plant cell wall conversion into simple sugars that can be easily fermented into ethanol or other added-value products.</p>
-<p>If you are interested into our research lines, please visit out <a href="http://bce.bioetanol.cnpem.br/projects.php">Projects</a> page.</p>
+<p>If you are interested into our research lines, please visit out <a href="https://diriano.github.io/projects.php">Projects</a> page.</p>
 </div>
      </div>
      <!--MAIN CONTENT AREA ENDS-->
