fix links in index

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ $(document).ready(function(){
       <h1><span class="h1_underline">Navigate</span></h1>
       <p> 
        <a href="https://diriano.github.io/">Home</a><br>
-       <a href="https://diriano.github.io/projects.php">Projects</a><br>
-       <a href="https://diriano.github.io/members.php">Members</a><br>
-       <a href="https://diriano.github.io/pictures.php">Pictures</a><br>
-       <a href="https://diriano.github.io/publications.php">Publications</a><br>
-       <a href="https://diriano.github.io/tools.php">Tools</a><br>
-       <a href="https://diriano.github.io/links.php">Links</a><br>
-       <a href="https://diriano.github.io/applying.php">Applying</a><br>
+       <a href="https://diriano.github.io/projects.html">Projects</a><br>
+       <a href="https://diriano.github.io/members.html">Members</a><br>
+       <a href="https://diriano.github.io/pictures.html">Pictures</a><br>
+       <a href="https://diriano.github.io/publications.html">Publications</a><br>
+       <a href="https://diriano.github.io/tools.html">Tools</a><br>
+       <a href="https://diriano.github.io/links.html">Links</a><br>
+       <a href="https://diriano.github.io/applying.html">Applying</a><br>
       </p>
      </div>
      <img src="./pixs/divider_col_01.gif" alt="---"> 
