fix pics location in members

--- a/members.html
+++ b/members.html
@@ -56,7 +56,7 @@ $(document).ready(function(){
        <a href="https://diriano.github.io/applying.php">Applying</a><br>
       </p>
      </div>
-     <img src="members_files/divider_col_01.gif" alt="---"> 
+     <img src="pixs/divider_col_01.gif" alt="---"> 
     </div>
     <!--DIV for col_01-->
     <!--MAIN CONTENT AREA STARTS-->
@@ -79,7 +79,7 @@ $(document).ready(function(){
   </ul>
  </div>
  <div class="member_picture">
-  <img src="members_files/BCES_Group_leader_Diego_M_Riano-Pachon.jpg" alt="Group leader: Dr. rer. nat. Diego M. Riano-Pachon" width="200"><br>
+  <img src="pixs/BCES_Group_leader_Diego_M_Riano-Pachon.jpg" alt="Group leader: Dr. rer. nat. Diego M. Riano-Pachon" width="200"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
@@ -94,7 +94,7 @@ $(document).ready(function(){
   </ul>
  </div>
  <div class="member_picture">
-  <img src="members_files/BCES_Lucas_Lopes.jpg" alt="PhD student, MSc Lucas Lopes" width="200"><br>
+  <img src="pixs/BCES_Lucas_Lopes.jpg" alt="PhD student, MSc Lucas Lopes" width="200"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
@@ -110,7 +110,7 @@ $(document).ready(function(){
  </ul>
  </div>
  <div class="member_picture">
-  <img src="members_files/BCES_Renato_Augusto_Correa_dos_Santos.jpg" alt="Master student Renato Augusto Correa dos Santos" width="200"><br>
+  <img src="pixs/BCES_Renato_Augusto_Correa_dos_Santos.jpg" alt="Master student Renato Augusto Correa dos Santos" width="200"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
@@ -124,7 +124,7 @@ $(document).ready(function(){
   </ul>
  </div>
  <div class="member_picture">
-  <img src="members_files/BCES_Natalia_Coutoune.jpg" alt="Master student Natalia Coutoune" width="200"><br>
+  <img src="pixs/BCES_Natalia_Coutoune.jpg" alt="Master student Natalia Coutoune" width="200"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
@@ -151,7 +151,7 @@ $(document).ready(function(){
      <!--MAIN CONTENT AREA ENDS-->
     </div>
     <!--DIV for wrapper_col_02-03-->
-    <img src="members_files/divider_hor_top.gif" alt="---">
+    <img src="pixs/divider_hor_top.gif" alt="---">
    </div>
    <!--DIV for container-->
   </div>
