Fixing pixs locations

--- a/members.html
+++ b/members.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
   <meta http-equiv="imagetoolbar" content="no">
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
  </head>
  <body data-feedly-mini="yes" cz-shortcut-listen="true">
   <div id="wrapper">
