Adding sugarcane transcriptome

--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@ Ethanol has a great strategic importance for the brazilian energy sector due to 
      <!--MAIN CONTENT AREA ENDS-->
     </div>
     <!--DIV for wrapper_col_02-03-->
-    <img src="./projects_files/divider_hor_top.gif" alt="---">
+    <img src="./pixs/divider_hor_top.gif" alt="---">
    </div>
    <!--DIV for container-->
   </div>
