--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@ During the last couple of years we have been exploring the Illumina's Synthetic 
 <li><a href="https://bce.bioetanol.cnpem.br/sugarcanegenome/">Access to genome data</a></li>
 </ul>
 <h2>Sugarcane gene catalogue</h2>
-<p>One of our first projects, contributing towards a comprehensive Sugarcane gene catalogue, is a study of the leaf development in Sugarcane, genotype SP80-3280. The leaf of C4 plants, such as sugarcane have a developmental gradient along the leaf. We have studied the sugarcane leaf +1 (First leaf from top to bottom with the delawp fully exposed), examining four different segments. More details are available in <a href="http://www.ncbi.nlm.nih.gov/pubmed/26714767">Mattiello et al., 2015</a>, and <a href="http://bce.bioetanol.cnpem.br/sugarcanetranscriptome">here</a>.
+<p>One of our first projects, contributing towards a comprehensive Sugarcane gene catalogue, is a study of the leaf development in Sugarcane, genotype SP80-3280. The leaf of C4 plants, such as sugarcane have a developmental gradient along the leaf. We have studied the sugarcane leaf +1 (First leaf from top to bottom with the delawp fully exposed), examining four different segments. More details are available in <a href="http://www.ncbi.nlm.nih.gov/pubmed/26714767">Mattiello et al., 2015</a>, and <a href="sugarcanetranscriptome.html">here</a>.
 </p>
 <h2>Análise genômica da levedura xilanolítica Pseudozyma brasiliensis</h2>
 <p>Team: Prof. Dr. Gustavo H. Goldman (USP), Dr.rer.nat. Diego M. Riano-Pachon (CTBE), Juliana Velasco de Castro Oliveira (CTBE) and Master student Renato Augusto Correa dos Santos</p>
