Adding link to LABIS site

--- a/members.html
+++ b/members.html
@@ -125,7 +125,7 @@
 <li>Dr. Juliana Velasco (CTBE)</li>
 <li>Dr. Gabriela Persinoti (CTBE)</li>
 <li>Prof. Dr. Gustavo H. Goldman (USP-RP)</li>
-<li>Prof. Dr. Flavia Vischi Winck (USP)</li>
+<li><a href="http://www3.iq.usp.br/pessoas_view.php?idDocente=468">Prof. Dr. Flavia Vischi Winck (USP)</a></li>
 <li>Dr. Lucia Mattiello (UniCamp)</li>
 </ul>
 <h1>Former students</h1>
