Updating HTML title

--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0030)https://diriano.github.io/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>BCES - Grupo de Biologia Computacional, Evolutiva e de Sistemas</title>
+  <title>BCES - Links</title>
   <link rel="stylesheet" href="./css/quips.css" type="text/css" title="preferred">
   <link rel="stylesheet" href="./css/member.css" type="text/css" title="preferred">
   <link rel="alternate stylesheet" href="./css/quips_alt.css" type="text/css" title="alternate">
