--- a/publications.html
+++ b/publications.html
@@ -824,3 +824,15 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Ingo Dreyer, and Bernd Mueller-R
 </tr>
 </table>
 
+     </div>
+     <!--MAIN CONTENT AREA ENDS-->
+    </div>
+    <!--DIV for wrapper_col_02-03-->
+    <img src="./pixs/divider_hor_top.gif" alt="---">
+   </div>
+   <!--DIV for container-->
+  </div>
+  <!--DIV for wrapper-->
+ 
+
+<div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" role="dialog" tabindex="-1" style="display: none;"><div id="cboxWrapper"><div><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxTitle" style="float: left;"></div><div id="cboxCurrent" style="float: left;"></div><button type="button" id="cboxPrevious"></button><button type="button" id="cboxNext"></button><button id="cboxSlideshow"></button><div id="cboxLoadingOverlay" style="float: left;"></div><div id="cboxLoadingGraphic" style="float: left;"></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none; max-width: none;"></div></div><div id="feedly-mini" title="feedly Mini tookit"></div></body><object id="3b0a595a-6b5b-a5b5-c99b-a9b43bb2a6b5" width="0" height="0" type="application/gas-events-cef"></object></html>
