Fix e-mail address display using javascript

--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
        <i style="font-weight: bold;">Grupo de Biologia Computacional, Evolutiva e de Sistemas</i>
       </div>
       <p style="text-align: center;"><i>Leader: Dr. rer. nat. Diego M. Riaño-Pachón</i></p>
-      <p style="text-align: center;"><i>contact: diriano at gmail do com or diriano at iq dot usp dot br</i>
+      <p style="text-align: center;"><i>contact:</i>
+<SCRIPT>
+<!--
+// iScramble 1.0 from http://www.z-host.com/php/iscramble
+var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02rarsEqC0 eii.da/%3%tnbrs%0 %flaciia0C3oorip3AC3oomi.3%%%3i2nb% rarlEmCr%fla.iua% %%3g2no%A02d.%@%0 22Am2om2%hmiu3i3% ';var c='5261893074';for(var i=0;i<18;i++) for(var j=0;j<10;j++) a+=b.charAt((parseInt(c.charAt(j))*18)+i);document.writeln(unescape(a));
+// -->
+</SCRIPT>
+<NOSCRIPT>
+<I>[Please Enable JavaScript]</I>
+</NOSCRIPT>
+
+
+
       </p>
      </div>
      <div id="header_col_04">
