Fix e-mail address display using javascript

--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 <NOSCRIPT>
 <I>[Please Enable JavaScript]</I>
 </NOSCRIPT>
-
-
-
       </p>
      </div>
      <div id="header_col_04">
@@ -69,7 +66,7 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 <div align="justify">
 <p>This is the web site of the Computational, Evolutionary and Systems Biology Group ("Grupo de Biologia Computacional, Evolutiva e de Sistemas": BCES).</p>
 <p>We are interested in the study of organisms involved in the generation of bioenergy. Employing techniques of bioinformatics, systems biology, evolutionary biology, network biology, computational biology, genomics and transcriptomics, among others. This includes, for instance, elucidating the genome sequence of the sugarcane plants, as this is the main source of green energy in Brazil, and understanding this genome could aid in strengthening molecular breeding approaches. Also, we are interested in understanding what are the enzymes required for optimal plant cell wall conversion into simple sugars that can be easily fermented into ethanol or other added-value products.</p>
-<p>If you are interested into our research lines, please visit out <a href="https://diriano.github.io/projects.php">Projects</a> page.</p>
+<p>If you are interested into our research lines, please visit out <a href="https://diriano.github.io/projects.html">Projects</a> page.</p>
 </div>
      </div>
      <!--MAIN CONTENT AREA ENDS-->
