--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,123 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Santos2016">1</a>]
+[<a name="DosSantos2017">1</a>]
+</td>
+<td class="bibtexitem">
+Renato Augusto&nbsp;Corrêa Dos&nbsp;Santos, Gustavo&nbsp;Henrique Goldman, and Diego&nbsp;Mauricio
+  Riaño-Pachón.
+ ploidyngs: Visually exploring ploidy with next generation sequencing
+  data.
+ <em>Bioinformatics (Oxford, England)</em>, April 2017.
+[&nbsp;<a href="dmrpPublications_bib.html#DosSantos2017">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1093/bioinformatics/btx204">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="PereiraSilva2017">2</a>]
+</td>
+<td class="bibtexitem">
+Lilian Pereira&nbsp;Silva, Patrícia Alves&nbsp;de Castro, Thaila&nbsp;Fernanda Dos&nbsp;Reis,
+  Mario&nbsp;Henrique Paziani, Márcia&nbsp;Regina Von Zeska&nbsp;Kress, Diego&nbsp;M
+  Riaño-Pachón, Daisuke Hagiwara, Laure N&nbsp;A Ries, Neil&nbsp;Andrew Brown, and
+  Gustavo&nbsp;H Goldman.
+ Genome-wide transcriptome analysis of aspergillus fumigatus exposed
+  to osmotic stress reveals regulators of osmotic and cell wall stresses that
+  are saka(hog1) and mpkc dependent.
+ <em>Cellular microbiology</em>, 19, April 2017.
+[&nbsp;<a href="dmrpPublications_bib.html#PereiraSilva2017">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1111/cmi.12681">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="DosReis2017">3</a>]
+</td>
+<td class="bibtexitem">
+Thaila&nbsp;Fernanda Dos&nbsp;Reis, Benjamin&nbsp;M Nitsche, Pollyne Borborema&nbsp;Almeida
+  de&nbsp;Lima, Leandro&nbsp;José de&nbsp;Assis, Laura Mellado, Steven&nbsp;D Harris, Vera Meyer,
+  Renato A&nbsp;Corrêa Dos&nbsp;Santos, Diego&nbsp;M Riaño-Pachón, Laure Nicolas&nbsp;Annick
+  Ries, and Gustavo&nbsp;H Goldman.
+ The low affinity glucose transporter hxtb is also involved in glucose
+  signalling and metabolism in aspergillus nidulans.
+ <em>Scientific reports</em>, 7:45073, March 2017.
+[&nbsp;<a href="dmrpPublications_bib.html#DosReis2017">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1038/srep45073">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Coutoune2017">4</a>]
+</td>
+<td class="bibtexitem">
+Natalia Coutouné, Aline Tieppo&nbsp;Nogueira Mulato, Diego&nbsp;Mauricio Riaño-Pachón,
+  and Juliana Velasco de&nbsp;Castro Oliveira.
+ Draft genome sequence of saccharomyces cerevisiae barra grande
+  (bg-1), a brazilian industrial bioethanol-producing strain.
+ <em>Genome announcements</em>, 5, March 2017.
+[&nbsp;<a href="dmrpPublications_bib.html#Coutoune2017">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1128/genomeA.00111-17">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Vries2017">5</a>]
+</td>
+<td class="bibtexitem">
+Ronald&nbsp;P de&nbsp;Vries, Robert Riley, Ad&nbsp;Wiebenga, Guillermo Aguilar-Osorio, Sotiris
+  Amillis, Cristiane&nbsp;Akemi Uchima, Gregor Anderluh, Mojtaba Asadollahi, Marion
+  Askin, Kerrie Barry, Evy Battaglia, Özgür Bayram, Tiziano Benocci,
+  Susanna&nbsp;A Braus-Stromeyer, Camila Caldana, David Cánovas, Gustavo&nbsp;C
+  Cerqueira, Fusheng Chen, Wanping Chen, Cindy Choi, Alicia Clum, Renato
+  Augusto&nbsp;Corrêa Dos&nbsp;Santos, André Ricardo de&nbsp;Lima Damásio, George
+  Diallinas, Tamás Emri, Erzsébet Fekete, Michel Flipphi, Susanne Freyberg,
+  Antonia Gallo, Christos Gournas, Rob Habgood, Matthieu Hainaut, María&nbsp;Laura
+  Harispe, Bernard Henrissat, Kristiina&nbsp;S Hildén, Ryan Hope, Abeer Hossain,
+  Eugenia Karabika, Levente Karaffa, Zsolt Karányi, Nada Kraševec, Alan Kuo,
+  Harald Kusch, Kurt LaButti, Ellen&nbsp;L Lagendijk, Alla Lapidus, Anthony
+  Levasseur, Erika Lindquist, Anna Lipzen, Antonio&nbsp;F Logrieco, Andrew MacCabe,
+  Miia&nbsp;R Mäkelä, Iran Malavazi, Petter Melin, Vera Meyer, Natalia Mielnichuk,
+  Márton Miskei, Ákos&nbsp;P Molnár, Giuseppina Mulé, Chew&nbsp;Yee Ngan, Margarita
+  Orejas, Erzsébet Orosz, Jean&nbsp;Paul Ouedraogo, Karin&nbsp;M Overkamp, Hee-Soo Park,
+  Giancarlo Perrone, Francois Piumi, Peter&nbsp;J Punt, Arthur F&nbsp;J Ram, Ana Ramón,
+  Stefan Rauscher, Eric Record, Diego&nbsp;Mauricio Riaño-Pachón, Vincent Robert,
+  Julian Röhrig, Roberto Ruller, Asaf Salamov, Nadhira&nbsp;S Salih, Rob&nbsp;A Samson,
+  Erzsébet Sándor, Manuel Sanguinetti, Tabea Schütze, Kristina Sepčić,
+  Ekaterina Shelest, Gavin Sherlock, Vicky Sophianopoulou, Fabio&nbsp;M Squina, Hui
+  Sun, Antonia Susca, Richard&nbsp;B Todd, Adrian Tsang, Shiela&nbsp;E Unkles, Nathalie
+  van&nbsp;de Wiele, Diana van Rossen-Uffink, Juliana Velasco de&nbsp;Castro Oliveira,
+  Tammi&nbsp;C Vesth, Jaap Visser, Jae-Hyuk Yu, Miaomiao Zhou, Mikael&nbsp;R Andersen,
+  David&nbsp;B Archer, Scott&nbsp;E Baker, Isabelle Benoit, Axel&nbsp;A Brakhage, Gerhard&nbsp;H
+  Braus, Reinhard Fischer, Jens&nbsp;C Frisvad, Gustavo&nbsp;H Goldman, Jos Houbraken,
+  Berl Oakley, István Pócsi, Claudio Scazzocchio, Bernhard Seiboth,
+  Patricia&nbsp;A vanKuyk, Jennifer Wortman, Paul&nbsp;S Dyer, and Igor&nbsp;V Grigoriev.
+ Comparative genomics reveals high biological diversity and specific
+  adaptations in the industrially and medically important fungal genus
+  aspergillus.
+ <em>Genome biology</em>, 18:28, February 2017.
+[&nbsp;<a href="dmrpPublications_bib.html#Vries2017">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1186/s13059-017-1151-0">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Santos2016">6</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Correa Santos, Gustavo&nbsp;H. Goldman, and Diego&nbsp;Mauricio Ria&ntilde;o   Pach&oacute;n.
@@ -85,27 +201,7 @@ Renato Augusto&nbsp;Correa Santos, Gustavo&nbsp;H. Goldman, and Diego&nbsp;Mauri
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="PereiraSilva2016">2</a>]
-</td>
-<td class="bibtexitem">
-Lilian Pereira&nbsp;Silva, Patrícia Alves&nbsp;de Castro, Thaila Fernanda&nbsp;Dos Reis,
-  Mario&nbsp;Henrique Paziani, Márcia&nbsp;Regina Von Zeska&nbsp;Kress, Diego&nbsp;M
-  Riaño-Pachón, Daisuke Hagiwara, Laure N&nbsp;A Ries, Neil&nbsp;Andrew Brown, and
-  Gustavo&nbsp;H Goldman.
- Genome-wide transcriptome analysis of aspergillus fumigatus exposed
-  to osmotic stress reveals regulators of osmotic and cell wall stresses that
-  are saka(hog1) and mpkc dependent.
- <em>Cellular microbiology</em>, October 2016.
-[&nbsp;<a href="dmrpPublications_bib.html#PereiraSilva2016">bib</a>&nbsp;| 
-<a href="http://dx.doi.org/10.1111/cmi.12681">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="Brown2016">3</a>]
+[<a name="Brown2016">7</a>]
 </td>
 <td class="bibtexitem">
 Neil&nbsp;Andrew Brown, Laure N&nbsp;A. Ries, Thaila&nbsp;F. Reis, Ranjith Rajendran,
@@ -124,7 +220,7 @@ Neil&nbsp;Andrew Brown, Laure N&nbsp;A. Ries, Thaila&nbsp;F. Reis, Ranjith Rajen
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="deCastro2016">4</a>]
+[<a name="deCastro2016">8</a>]
 </td>
 <td class="bibtexitem">
 Patr&iacute;cia&nbsp;Alves de Castro, Thaila&nbsp;Fernanda Dos Reis, Stephen&nbsp;K.
@@ -145,7 +241,7 @@ Patr&iacute;cia&nbsp;Alves de Castro, Thaila&nbsp;Fernanda Dos Reis, Stephen&nbs
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2016">5</a>]
+[<a name="Winck2016">9</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V. Winck, David O&nbsp;P&aacute;ez Melo, Diego&nbsp;M. Ria&ntilde;o-Pach&oacute;n,
@@ -165,7 +261,7 @@ Flavia&nbsp;V. Winck, David O&nbsp;P&aacute;ez Melo, Diego&nbsp;M. Ria&ntilde;o-
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2016a">6</a>]
+[<a name="Winck2016a">10</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V Winck, Diego&nbsp;M Riaño-Pachón, and Telma&nbsp;T Franco.
@@ -181,7 +277,7 @@ Flavia&nbsp;V Winck, Diego&nbsp;M Riaño-Pachón, and Telma&nbsp;T Franco.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="DosSantos2015">7</a>]
+[<a name="DosSantos2015">11</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;Aparecida Berretta, Hernane
@@ -201,7 +297,7 @@ Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;Aparecida Berretta, He
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Mandelli2015">8</a>]
+[<a name="Mandelli2015">12</a>]
 </td>
 <td class="bibtexitem">
 Fernanda Mandelli, Brenda Oliveira Ramires, Matthew&nbsp;Brian Couger, Douglas
@@ -221,7 +317,7 @@ Fernanda Mandelli, Brenda Oliveira Ramires, Matthew&nbsp;Brian Couger, Douglas
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Marine2015">9</a>]
+[<a name="Marine2015">13</a>]
 </td>
 <td class="bibtexitem">
 Mar&ccedil;al Marin&eacute;, Neil&nbsp;Andrew Brown, Diego&nbsp;Mauricio
@@ -239,7 +335,7 @@ Mar&ccedil;al Marin&eacute;, Neil&nbsp;Andrew Brown, Diego&nbsp;Mauricio
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Mattiello2015">10</a>]
+[<a name="Mattiello2015">14</a>]
 </td>
 <td class="bibtexitem">
 Lucia Mattiello, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Marina Camara&nbsp;Mattos
@@ -259,7 +355,7 @@ Lucia Mattiello, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Marina Camara&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Rosas-Morales2015">11</a>]
+[<a name="Rosas-Morales2015">15</a>]
 </td>
 <td class="bibtexitem">
 Juan&nbsp;Pablo Rosas-Morales, Ximena Perez-Mancilla, Liliana L&oacute;pez-Kleine,
@@ -277,7 +373,7 @@ Juan&nbsp;Pablo Rosas-Morales, Ximena Perez-Mancilla, Liliana L&oacute;pez-Klein
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2015">12</a>]
+[<a name="Winck2015">16</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V. Winck, Ana&nbsp;Carolina Prado Ribeiro, Rom&ecirc;nia Ramos Domingues,
@@ -297,7 +393,7 @@ Flavia&nbsp;V. Winck, Ana&nbsp;Carolina Prado Ribeiro, Rom&ecirc;nia Ramos Domin
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Buitrago-Florez2014">13</a>]
+[<a name="Buitrago-Florez2014">17</a>]
 </td>
 <td class="bibtexitem">
 Francisco&nbsp;Javier Buitrago-Fl&oacute;rez, Silvia Restrepo, and Diego&nbsp;Mauricio
@@ -315,7 +411,7 @@ Francisco&nbsp;Javier Buitrago-Fl&oacute;rez, Silvia Restrepo, and Diego&nbsp;Ma
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Cristancho2014">14</a>]
+[<a name="Cristancho2014">18</a>]
 </td>
 <td class="bibtexitem">
 Marco&nbsp;A. Cristancho, David&nbsp;Octavio Botero-Rozo, William Giraldo, Javier Tabima,
@@ -335,7 +431,7 @@ Marco&nbsp;A. Cristancho, David&nbsp;Octavio Botero-Rozo, William Giraldo, Javie
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="DosSantos2014">15</a>]
+[<a name="DosSantos2014">19</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;A. Berretta, Hernane da&nbsp;Silva
@@ -355,7 +451,7 @@ Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;A. Berretta, Hernane d
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Oliveira2014">16</a>]
+[<a name="Oliveira2014">20</a>]
 </td>
 <td class="bibtexitem">
 Juliana Velasco de&nbsp;Castro Oliveira, Thuanny&nbsp;A. Borges, Renato&nbsp;Augusto
@@ -374,7 +470,7 @@ Juliana Velasco de&nbsp;Castro Oliveira, Thuanny&nbsp;A. Borges, Renato&nbsp;Aug
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Omidbakhshfard2014">17</a>]
+[<a name="Omidbakhshfard2014">21</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Amin Omidbakhshfard, Flavia&nbsp;Vischi Winck, Samuel Arvidsson, Diego&nbsp;M.
@@ -392,7 +488,7 @@ Mohammad&nbsp;Amin Omidbakhshfard, Flavia&nbsp;Vischi Winck, Samuel Arvidsson, D
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Lopez-Kleine2013">18</a>]
+[<a name="Lopez-Kleine2013">22</a>]
 </td>
 <td class="bibtexitem">
 Liliana L&oacute;pez-Kleine, Andr&eacute;s Pinz&oacute;n, Diego Chaves, Silvia
@@ -410,7 +506,7 @@ Liliana L&oacute;pez-Kleine, Andr&eacute;s Pinz&oacute;n, Diego Chaves, Silvia
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Oliveira2013">19</a>]
+[<a name="Oliveira2013">23</a>]
 </td>
 <td class="bibtexitem">
 Juliana Velasco de&nbsp;Castro Oliveira, Renato Augusto&nbsp;Corr&ecirc;a Dos Santos,
@@ -430,7 +526,7 @@ Juliana Velasco de&nbsp;Castro Oliveira, Renato Augusto&nbsp;Corr&ecirc;a Dos Sa
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Read2013">20</a>]
+[<a name="Read2013">24</a>]
 </td>
 <td class="bibtexitem">
 Betsy&nbsp;A. Read, Jessica Kegel, Mary&nbsp;J. Klute, Alan Kuo, Stephane&nbsp;C. Lefebvre,
@@ -456,7 +552,7 @@ Betsy&nbsp;A. Read, Jessica Kegel, Mary&nbsp;J. Klute, Alan Kuo, Stephane&nbsp;C
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2013">21</a>]
+[<a name="Winck2013">25</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;Vischi Winck, Flavia Vischi Winck, Samuel Arvidsson, Diego&nbsp;Mauricio
@@ -476,7 +572,7 @@ Flavia&nbsp;Vischi Winck, Flavia Vischi Winck, Samuel Arvidsson, Diego&nbsp;Maur
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Dreyer2012">22</a>]
+[<a name="Dreyer2012">26</a>]
 </td>
 <td class="bibtexitem">
 Ingo Dreyer, Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio
@@ -494,7 +590,7 @@ Ingo Dreyer, Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Gomez-Porras2012">23</a>]
+[<a name="Gomez-Porras2012">27</a>]
 </td>
 <td class="bibtexitem">
 Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
@@ -513,7 +609,7 @@ Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2012">24</a>]
+[<a name="Winck2012">28</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V. Winck, Diego&nbsp;M. Ria&ntilde;o-Pach&oacute;n, Frederik Sommer, Jens
@@ -530,7 +626,7 @@ Flavia&nbsp;V. Winck, Diego&nbsp;M. Ria&ntilde;o-Pach&oacute;n, Frederik Sommer,
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Banks2011">25</a>]
+[<a name="Banks2011">29</a>]
 </td>
 <td class="bibtexitem">
 Jo&nbsp;Ann Banks, Tomoaki Nishiyama, Mitsuyasu Hasebe, John&nbsp;L. Bowman, Michael
@@ -570,7 +666,7 @@ Jo&nbsp;Ann Banks, Tomoaki Nishiyama, Mitsuyasu Hasebe, John&nbsp;L. Bowman, Mic
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Rohrmann2011">26</a>]
+[<a name="Rohrmann2011">30</a>]
 </td>
 <td class="bibtexitem">
 Johannes Rohrmann, Takayuki Tohge, Rob Alba, Sonia Osorio, Camila Caldana, Ryan
@@ -591,7 +687,7 @@ Johannes Rohrmann, Takayuki Tohge, Rob Alba, Sonia Osorio, Camila Caldana, Ryan
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Lang2010">27</a>]
+[<a name="Lang2010">31</a>]
 </td>
 <td class="bibtexitem">
 Daniel Lang, Benjamin Weiche, Gerrit Timmerhaus, Sandra Richardt, Diego&nbsp;M.
@@ -611,7 +707,7 @@ Daniel Lang, Benjamin Weiche, Gerrit Timmerhaus, Sandra Richardt, Diego&nbsp;M.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Perez-Rodriguez2010">28</a>]
+[<a name="Perez-Rodriguez2010">32</a>]
 </td>
 <td class="bibtexitem">
 Paulino P&eacute;rez-Rodr&iacute;guez, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
@@ -630,7 +726,7 @@ Paulino P&eacute;rez-Rodr&iacute;guez, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oac
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2010">29</a>]
+[<a name="Riano-Pachon2010">33</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Sabrina Kleessen, Jost Neigenfind,
@@ -649,7 +745,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Sabrina Kleessen, Jost Neigenfin
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2009">30</a>]
+[<a name="Riano-Pachon2009">34</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Axel Nagel, Jost Neigenfind, Robert
@@ -668,7 +764,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Axel Nagel, Jost Neigenfind, Rob
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2008">31</a>]
+[<a name="Riano-Pachon2008">35</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Luiz Gustavo&nbsp;Guedes Corr&ecirc;a,
@@ -685,7 +781,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Luiz Gustavo&nbsp;Guedes Corr&ec
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Arvidsson2008">32</a>]
+[<a name="Arvidsson2008">36</a>]
 </td>
 <td class="bibtexitem">
 Samuel Arvidsson, Miroslaw Kwasniewski, Diego&nbsp;Mauricio
@@ -703,7 +799,7 @@ Samuel Arvidsson, Miroslaw Kwasniewski, Diego&nbsp;Mauricio
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Balazadeh2008">33</a>]
+[<a name="Balazadeh2008">37</a>]
 </td>
 <td class="bibtexitem">
 S.&nbsp;Balazadeh, D.&nbsp;M. Ria&ntilde;o-Pach&oacute;n, and B.&nbsp;Mueller-Roeber.
@@ -720,7 +816,7 @@ S.&nbsp;Balazadeh, D.&nbsp;M. Ria&ntilde;o-Pach&oacute;n, and B.&nbsp;Mueller-Ro
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Correa2008">34</a>]
+[<a name="Correa2008">38</a>]
 </td>
 <td class="bibtexitem">
 Luiz Gustavo&nbsp;Guedes Corr&ecirc;a, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
@@ -739,7 +835,7 @@ Luiz Gustavo&nbsp;Guedes Corr&ecirc;a, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oac
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Gomez-Porras2007">35</a>]
+[<a name="Gomez-Porras2007">39</a>]
 </td>
 <td class="bibtexitem">
 Judith&nbsp;L. G&oacute;mez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Ingo
@@ -757,7 +853,7 @@ Judith&nbsp;L. G&oacute;mez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Merchant2007">36</a>]
+[<a name="Merchant2007">40</a>]
 </td>
 <td class="bibtexitem">
 Sabeeha&nbsp;S. Merchant, Simon&nbsp;E. Prochnik, Olivier Vallon, Elizabeth&nbsp;H. Harris,
@@ -801,7 +897,7 @@ Sabeeha&nbsp;S. Merchant, Simon&nbsp;E. Prochnik, Olivier Vallon, Elizabeth&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2007">37</a>]
+[<a name="Riano-Pachon2007">41</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Slobodan Ruzicic, Ingo Dreyer, and
@@ -818,7 +914,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Slobodan Ruzicic, Ingo Dreyer, a
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2005">38</a>]
+[<a name="Riano-Pachon2005">42</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Ingo Dreyer, and Bernd Mueller-Roeber.
