New pixs Feb 2017

--- a/pictures.html
+++ b/pictures.html
@@ -69,6 +69,11 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 <script>
 var data = [
     {
+        image: 'pixs/BCES_and_LABIS_BBQ_All_Feb_18_2017.png',
+        title: 'BCES and LABIS BBQ All February 18 2017',
+        description: 'BBQ BCES and LABIS (IQ/USP) 02.2017'
+    },
+    {
         image: 'pixs/BCES_and_LABIS_BBQ_All_July_31_2016.png',
         title: 'BCES and LABIS BBQ All July 31 2016',
         description: 'BBQ BCES (CTBE) and LABIS (IQ/USP) 06.2016'
